# noisy-networks-measurements

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: bernoulli_data_ER_prior.stan  bernoulli_data_SCM_prior.stan  compiler.py  fast_bernoulli.stan  fast_poisson.stan  multitype_poisson_data_ER_prior.stan  poisson_data_ER_prior.stan  poisson_data_SCM_prior.stan  readme.md
model_templates/: bernoulli.stan  bernoulli_data_ER_prior.stan  bernoulli_data_SCM_prior.stan  fast_bernoulli.stan  fast_poisson.stan  generic_dir.stan  generic_undir.stan  generic_undir_multitype.stan  multitype_poisson_data_ER_prior.stan  poisson_data_ER_prior.stan  poisson_data_SCM_prior.stan  readme.md
templates/: dir.stan  readme.md  undir.stan  undir_multitype.stan
tutorial/: dolphin.csv  tutorial.ipynb
